@@ -78,10 +78,7 @@ main(int ac, char **av)
 
     //Delete directory
     //~ printf("pylauncher: deleting temp directory %s\n", targetdir);
-    if (delete_directory(targetdir)){
-        strcpy(message, "Error deleting directory\n");
-        goto error;
-    }
+    delete_directory(targetdir);
 
     //~ printf("pylauncher: Finished\n");
     return 0;
