@@ -232,6 +232,7 @@ wubi (9.04) UNRELEASED; urgency=low
     passes them straight through, so you'll get "Ubuntu Linux" instead of
     Ubuntu Linux.
   * Removed an erroneous closing parentheses in the use_cd check.
-  * Properly test the return value of delete_directory.
+  * Ignore any failure in delete_directory as it is just working with temporary
+    directories.
 
  -- Agostino Russo <agostino.russo@gmail.com>  Mon, 06 Apr 2009 01:38:59 +0100
